Fix spacing problem with submit button on Curator > View galleries page

--- a/app/assets/stylesheets/_admin.css.scss
+++ b/app/assets/stylesheets/_admin.css.scss
@@ -34,7 +34,7 @@
   .nav-tabs {
     margin-bottom: 10px;
   }
-  form, .btn, #refresh_flags, #curator_flag_selection {
+  form, #refresh_flags, #curator_flag_selection {
     margin-top: 6px;
     margin-bottom: 0;
   }
